max values for length width height

--- a/src/adproc/Main.form
+++ b/src/adproc/Main.form
@@ -127,6 +127,19 @@
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Group type="102" attributes="0">
                                               <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="bottomReinf" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="cornerReinf" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="sealBox" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="colourError" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Component id="jSeparator1" max="32767" attributes="0"/>
+                                              <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" attributes="0">
+                                              <Group type="103" groupAlignment="0" attributes="0">
                                                   <Group type="102" alignment="0" attributes="0">
                                                       <Component id="widthBox" min="-2" pref="57" max="-2" attributes="0"/>
                                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -140,25 +153,9 @@
                                                   <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                                                   <Component id="whlError" alignment="0" min="-2" max="-2" attributes="0"/>
                                                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="quantityBox" alignment="0" min="-2" pref="65" max="-2" attributes="0"/>
                                               </Group>
                                               <EmptySpace pref="142" max="32767" attributes="0"/>
-                                          </Group>
-                                          <Group type="102" attributes="0">
-                                              <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="bottomReinf" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="cornerReinf" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="sealBox" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="colourError" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              </Group>
-                                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                                          </Group>
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <Component id="jSeparator1" max="32767" attributes="0"/>
-                                              <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <Component id="quantityBox" min="-2" pref="65" max="-2" attributes="0"/>
-                                              <EmptySpace max="32767" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <Group type="103" groupAlignment="0" attributes="0">
